--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.29MB/s(Youtube:不良林), server: 185.172.113.243, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-2.48MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
-  - {name: 🇫🇷 法国-1.20MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-485.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇨🇳 中国-6.52MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-777.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-314.9KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.39MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇨🇳 中国-305.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.73MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.19MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
+  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.48MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-314.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.48MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-314.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.48MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-314.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.48MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-314.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.48MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-314.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.48MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-314.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.48MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-314.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
