--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-777.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.52MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.71MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.72MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇭🇰 香港-1.73MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.19MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
+  - {name: 🇫🇷 法国-839.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-548.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-434.8KB/s(Youtube:不良林), server: 20.189.124.150, port: 16578, type: vmess, uuid: 5f66eeaf-2a7a-4c07-ae83-c440e0da2934, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 捷克-4.12MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇭🇰 香港-2.68MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-509.3KB/s(Youtube:不良林), server: jpcu.dfnode.top, port: 30004, type: vmess, uuid: a6ef37c5-1a0f-3204-8ca6-fa7a18c062c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jpcu.dfnode.top}}
+  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 捷克-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 捷克-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 捷克-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 捷克-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 捷克-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 捷克-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-777.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 捷克-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
