--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-839.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-548.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-434.8KB/s(Youtube:不良林), server: 20.189.124.150, port: 16578, type: vmess, uuid: 5f66eeaf-2a7a-4c07-ae83-c440e0da2934, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇦 加拿大-959.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇳🇱 荷兰-1.77MB/s(Youtube:不良林), server: 213.183.51.171, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇯🇵 日本-662.8KB/s(Youtube:不良林), server: 185.172.113.243, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.11MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 捷克-4.12MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
   - {name: 🇭🇰 香港-2.68MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
   - {name: 🇨🇳 中国-509.3KB/s(Youtube:不良林), server: jpcu.dfnode.top, port: 30004, type: vmess, uuid: a6ef37c5-1a0f-3204-8ca6-fa7a18c062c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jpcu.dfnode.top}}
   - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.68MB/s(Youtube:不良林), server: us1.jjzgy.live, port: 32333, type: trojan, password: e12b8580-f641-380b-9d10-8036c60780f1, sni: us1.jjzgy.live, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-662.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 捷克-4.12MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-662.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 捷克-4.12MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-662.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 捷克-4.12MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-662.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 捷克-4.12MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-662.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 捷克-4.12MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-662.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 捷克-4.12MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-839.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-548.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-662.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.11MB/s(Youtube:不良林)
       - 捷克-4.12MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-509.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
